# DataFusion

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile.dev  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/routes/: datasets.py  diagnostics.py  reports.py  thredds.py  users.py
backend/app/db/: session.py
backend/app/models/: __init__.py  dataset.py  diagnostic.py  user.py
backend/app/thredds/: client.py
frontend/: Dockerfile.dev  package.json
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/components/layout/: AppHeader.tsx  AppSidebar.tsx
frontend/src/pages/: DataBrowser.tsx  Diagnostics.tsx  Reports.tsx  ThreddsConfig.tsx
frontend/src/services/: api.ts
frontend/src/store/slices/: authSlice.ts  datasetsSlice.ts  diagnosticsSlice.ts  threddsSlice.ts
