[tool.poetry]
name = "marine-data-integration"
version = "0.1.0"
description = "Marine Environmental Data Integration and Diagnostic Product Software"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.7"
alembic = "^1.10.2"
pydantic = "^1.10.7"
python-jose = "^3.3.0"
passlib = "^1.7.4"
python-multipart = "^0.0.6"
netCDF4 = "^1.6.3"
h5py = "^3.8.0"
numpy = "^1.24.2"
pandas = "^2.0.0"
xarray = "^2023.3.0"
scipy = "^1.10.1"
celery = "^5.2.7"
redis = "^4.5.4"
siphon = "^0.9"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
httpx = "^0.24.0"
black = "^23.3.0"
isort = "^5.12.0"
mypy = "^1.2.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true